[package]
name = "dtool-rust"
version = "0.1.0"
authors = ["Matthew Hartley <mhartley@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
uuid = { version = "0.8", features = ["v4"] }
md5 = "0.7.0"
sha1 = "0.6.0"
clap = "3.0.0-beta.1"
whoami = "0.9.0"
